[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/enemies/FinalBoss.gd" type="Script" id=1]
[ext_resource path="res://scenes/boss/BossBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/stages/StageEnd/Boss.tres" type="Animation" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 75.8905

[sub_resource type="CircleShape2D" id=2]
radius = 98.938

[node name="FinalBoss" type="CharacterBody2D"]
position = Vector2( 400, 150 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, -32 )
shape = SubResource( 1 )

[node name="BossBody" parent="." instance=ExtResource( 2 )]

[node name="DamageArea" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0.585052, -51.1317 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Boss = ExtResource( 3 )
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
